--- a/html-css-practice/samples/CvSample/index.html
+++ b/html-css-practice/samples/CvSample/index.html
@@ -57,7 +57,7 @@
                 <div class="software-dev-qualification">
                     <p>2019</p>
                     <p>Qualifica di sviluppatore e programmatore .NET</p>
-                    <p>Odero</p>
+                    <p>Ente FIRE</p>
                 </div>
             </div>
 
@@ -72,7 +72,53 @@
         </section>
 
         <section class="section-right">
+            <div class="head">
+                <h1><span>Alessio</span> Maggio</h1>
+                <h2>Software Developer</h2>
+
+            </div>
+
+            <div class="experience">
+                <h3>Experience</h3>
+
+                <div class="fos-group">
+                    <p>2019 - 2024</p>
+                    <h4>Gruppo Fos | Via E. Melen 77</h4>
+
+                    <h2 class="job-title">Software Developer</h2>
+                    <p>Sviluppo e manutenzione di applicativi web.</p>
+                    <p>Alcuni di questi: Sanilog, TPL, AAsida, Fondo Enpaia, Vodafone.</p>
+                    <br>
+
+                    <p>Data analisi e gestione dei database inerenti alle applicazioni web elencate sopra con implementazione di trigger, query complesse e stored procedure. <br>Effettutate inoltre migrazioni dei database da un sistema vecchio a quello nuovo per tutte le applicazioni elencate.</p>
+                    <br>
+                    <p>Gestione delle macchine server sviluppo, test e produzione.</p>
+                </div>
+            </div>
             
+            <div class="skill">
+                <h3>Skills</h3>
+
+                <div class="skills">
+                    <ul>
+                        <li>.NET</li>
+                        <li>Entity Framework</li>
+                        <li>SQL</li>
+                        <li>HTML - CSS - JS</li>
+                    </ul>
+                </div>
+
+                <div class="plus-skill">
+                    <h4>More</h4>
+                    <br>
+                    <ul>
+                        <li>DevExpress</li>
+                        <li>Git</li>
+                        <li>Windows - Linux</li>
+                        <li>Docker Basics</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 </body>
