--- a/html-css-practice/samples/CvSample/index.html
+++ b/html-css-practice/samples/CvSample/index.html
@@ -22,10 +22,10 @@
             </div>
 
             <div class="contacts">
-                <h3>Contacts</h3>
+                <h3>Contatti</h3>
 
                 <div class="phone">
-                    <h4>Phone</h4>
+                    <h4>Cellulare</h4>
                     <p>3491335168</p>
                 </div>
 
@@ -33,15 +33,10 @@
                     <h4>Email</h4>
                     <p>maggioalessio2@gmail.com</p>
                 </div>
-
-                <div class="address">
-                    <h4>Address</h4>
-                    <p>Via P.N. Cambiaso 6B/uni</p>
-                </div>
             </div>
 
             <div class="education">
-                <h3>Education</h3>
+                <h3>Titoli di studio</h3>
                 <div class="software-dev-qualification">
                     <p>2019</p>
                     <p>Qualifica di sviluppatore e programmatore .NET</p>
@@ -62,11 +57,11 @@
             </div>
 
             <div class="language">
-                <h3>Language</h3>
+                <h3>Lingue</h3>
                 
                 <div class="languages">
-                    <p>Italian</p>
-                    <p>English</p>
+                    <p>Italiano</p>
+                    <p>Inglese</p>
                 </div>
             </div>
         </section>
@@ -79,7 +74,7 @@
             </div>
 
             <div class="experience">
-                <h3>Experience</h3>
+                <h3>Esperienza</h3>
 
                 <div class="fos-group">
                     <p>2019 - ad oggi</p>
@@ -109,7 +104,7 @@
                 </div>
 
                 <div class="plus-skill">
-                    <h4>More</h4>
+                    <h4>Altro</h4>
                     <br>
                     <ul>
                         <li>DevExpress</li>
